fix overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -424,7 +424,6 @@ footer p {
     width: 100%;
     transform-style: preserve-3d;
     height: auto;
-    /*transition: all 0.5s ease-out;*/
     background: white;
     border: none;
     transition: transform 1s;
@@ -464,75 +463,7 @@ footer p {
 .card card-flip .is-flipped {
     transform: rotateY(180deg);
 }
-/*FAQ 2*/
-/*
-#faqs .section-name{
-	border-top: 4px solid #fff;
-    border-right: 4px solid #fff;
-	border-left: 4px solid #fff;
-	border-bottom: 4px solid #fff;
 
-	width: 10%;
-	height: 40%;
-	padding-bottom: 5px;
-	margin: 0 auto;
-}
-
-#vert-line-below-faqs{
-	content: "";
-	display: block;
-	position: relative;
-
-	width: 0.5px;
-	height: 20px;
-
-	border-left: 4px solid #fff;
-	margin: 0 auto;
-	top: 0.1px;
-}
-
-#faqs .line{
-    display: block;
-	position: relative;
-	
-    width: 50%;
-	height: 20px;
-	
-    border-top: 4px solid #fff;
-    border-right: 4px solid #fff;
-    border-left: 4px solid #fff;
-	margin: 0 auto;
-	
-	top: 0.001px;
-	bottom: -30px;
-	z-index: 1;
-}
-
-#faqs .line-between-cards{
-	content: "";
-	display: block;
-	position: relative;
-
-	width: 0.5px;
-	height: 20px;
-
-	border-left: 4px solid #fff;
-	margin: 0 auto;
-	left: -15%;
-}
-
-@media only screen and (max-width: 1000px) {
-  .video,
-  .img-recruit {
-    display: none;
-  }
-
-	.page-section {
-		padding: 3rem 0px;
-	}
-	
-}
-*/
 @media only screen and (max-width: 1000px) {
     .video, .img-recruit {
     display: none;
@@ -803,3 +734,70 @@ tr > .event {
             text-decoration: none;
             color: #123b6b;
         }
+
+@media screen and (min-width: 640px) {
+    .card-block .btn-outline-primary {
+        width: 100%;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        bottom: 0;
+        left: 0;
+        position: absolute;
+    }
+
+    .card {
+        margin: 20px 0;
+        justify-content: center;
+    }
+
+    /* Flip Cards CSS */
+    .card-container {
+        perspective: 700px;
+    }
+
+    .card-flip {
+        position: relative;
+        width: 100%;
+        transform-style: preserve-3d;
+        height: auto;
+        background: white;
+        border: none;
+        transition: transform 1s;
+    }
+
+        .card-flip div {
+            backface-visibility: hidden;
+            transform-style: preserve-3d;
+            height: 100%;
+            width: 100%;
+            border: none;
+        }
+
+        .card-flip .front {
+            position: relative;
+            z-index: 1;
+            justify-content: center;
+            backface-visibility: hidden;
+        }
+
+        .card-flip .back {
+            position: relative;
+            z-index: 0;
+            transform: rotateY(180deg);
+            padding: 5%;
+            backface-visibility: hidden;
+        }
+
+    .back {
+        padding: 12px;
+    }
+
+    .card-container:hover .card-flip {
+        transform: rotateY(180deg);
+    }
+
+    .card card-flip .is-flipped {
+        transform: rotateY(180deg);
+    }
+
+}
